<resources>
    <string name="app_name">英雄谱</string>
    <string name="action_settings">Settings</string>

    <string name="menu_collections">collections</string>
    <string name="menu_search">search</string>
    <string name="menu_more">more</string>
    <string name="menu_share">share</string>
    <string name="menu_skins">skins</string>
    <string name="menu_send">send</string>
    <string name="menu_title_download">下载</string>
    <string name="menu_title_wallpaper">设为壁纸</string>

    <string name="request_data_progress_message">初始化...</string>
    <string name="download_data_progress_message">下载数据...</string>
    <string name="parse_data_progress_message">解析数据中...</string>
    <string name="save_data_progress_message">保存数据...</string>
    <string name="init_successful_progress_message">初始化完成</string>
    <string name="init_failed_progress_message">初始化失败</string>
    <string name="task_moved_to_background">任务移至后台进行</string>
    <string name="reselect_locale_message">重新选择语言</string>
    <string name="switch_locale_process_message">切换语言中...</string>

    <string name="okay_button">确认</string>
    <string name="cancel_button">取消</string>
    <string name="download_button">开始下载</string>

    <string name="collections_title">收藏夹</string>
    <string name="settings_title">设置</string>
    <string name="about_app_title">关于应用</string>
    <string name="search_title">搜索</string>
    <string name="search_label">搜索英雄</string>
    <string name="search_hint">请输入英雄名称</string>
    <string name="switch_success_notification_title">语言切换成功</string>

    <string name="pref_group_title_static_data">数据</string>
    <string name="pref_key_locale">locale</string>
    <string name="pref_key_cache_size">cache_size</string>
    <string name="pref_title_locale">切换语言</string>
    <string name="pref_title_cache_size">缓存</string>

    <string name="pref_group_title_about">关于</string>
    <string name="pref_key_about_app">about_app</string>
    <string name="pref_key_open_source_license">osl</string>
    <string name="pref_key_app_version">app_version</string>
    <string name="pref_title_about_app">关于应用</string>
    <string name="pref_title_open_source_license">开源许可证</string>
    <string name="pref_title_app_version">版本</string>

    <string name="pref_key_feedback">feedback</string>
    <string name="pref_title_feedback">意见反馈</string>

    <string name="about_app_message">
        &#160;&#160;英雄谱(Theogony)是一款和英雄联盟有关的应用，
        在这里既可以阅读英雄们的背景故事也可以欣赏精美的插画。\n\n

        目前该应用已经在Github开源，项目地址: \n
        https://github.com/VernonLee/Theogony
    </string>

    <string name="feedback_message">
        如果你喜欢这个APP或者想一起参与改进，欢迎联系我：1516lee@gmail.com
    </string>

    <string name="dialog_title_warning">警告</string>

    <string name="select_locale_dialog_title">选择语言</string>
    <string name="message_miss_app_key">APP_KEY丢失，无法正常运行应用</string>

    <!-- new strings -->

    <string name="navigation_item_champion_list">英雄列表</string>
    <string name="navigation_item_collection_list">收藏夹</string>
    <string name="navigation_item_skin_list">皮肤库</string>
    <string name="navigation_item_night_mode">夜间模式</string>
    <string name="navigation_item_day_mode">白天模式</string>
    <string name="navigation_item_settings">设置</string>
    <string name="navigation_item_exit_to_app">退出应用</string>


    <string name="shared_element_name_avatar">avatar</string>
    <string name="shared_element_name_skin_cover">skin_cover</string>

    <!--vp = viewpager-->
    <string name="vp_title_lore">英雄故事</string>
    <string name="vp_title_skins">皮肤插画</string>
    <string name="vp_title_basic_info">基本信息</string>
    <string name="vp_title_spells">技能介绍</string>

    <string name="title_desc">简介</string>
    <string name="title_tags">类型</string>
    <string name="title_stats">属性</string>
    <string name="title_information_chart">英雄解读</string>
    <string name="title_lore">背景故事</string>
    <string name="title_passive">被动</string>
    <string name="title_spells">技能</string>

    <string name="title_attack">物理攻击</string>
    <string name="title_defense">防御能力</string>
    <string name="title_magic">魔法攻击</string>
    <string name="title_difficulty">上手难度</string>

</resources>
