<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_group_title_static_data">

        <Preference
            android:key="@string/pref_key_locale"
            android:title="@string/pref_title_locale"/>

        <Preference
            android:key="@string/pref_key_cache_size"
            android:title="@string/pref_title_cache_size"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_group_title_about">

        <Preference
            android:key="@string/pref_key_about_app"
            android:title="@string/pref_title_about_app"/>

        <Preference
            android:key="@string/pref_key_open_source_license"
            android:title="@string/pref_title_open_source_license"/>

        <Preference
            android:key="@string/pref_key_app_version"
            android:title="@string/pref_title_app_version"/>

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            android:key="@string/pref_key_feedback"
            android:title="@string/pref_title_feedback"/>

    </PreferenceCategory>

</PreferenceScreen>