<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_champion_list"
            android:icon="@drawable/ic_champions"
            android:title="@string/navigation_item_champion_list"/>

        <item
            android:id="@+id/menu_item_collection_list"
            android:icon="@drawable/ic_collections"
            android:title="@string/navigation_item_collection_list"/>

        <item
            android:id="@+id/menu_item_wallpaper"
            android:icon="@drawable/ic_wallpaper"
            android:title="@string/navigation_item_skin_list"/>

        <item
            android:id="@+id/menu_item_dayNight"
            android:icon="@drawable/ic_night_mode"
            android:title="@string/navigation_item_night_mode"/>

    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="single">

        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_item_settings"/>

    </group>
</menu>